--- a/package.json
+++ b/package.json
@@ -6,6 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/howdycrystalm/orderhound2.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/howdycrystalm/orderhound2/issues"
+  },
+  "homepage": "https://github.com/howdycrystalm/orderhound2#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.16.0",
+    "cors": "^2.8.1",
+    "express": "^4.14.1",
+    "express-session": "^1.15.0",
+    "massive": "^2.6.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
+  }
 }
