--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     "cors": "^2.8.1",
     "express": "^4.14.1",
     "express-session": "^1.15.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.0.1",
     "massive": "^2.6.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
