gulp is set up, not working

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
+    "gulp-watch": "^4.3.11",
     "massive": "^2.6.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
