--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.1",
     "express-session": "^1.15.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.1.7",
     "gulp-htmlmin": "^3.0.0",
@@ -34,6 +35,5 @@
     "massive": "^2.6.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
-  },
-  "devDependencies": {}
+  }
 }
