--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "massive": "^2.6.0",
     "moment": "^2.17.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sweetalert": "^1.1.3"
   }
 }
