--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-watch": "^4.3.11",
     "massive": "^2.6.0",
     "moment": "^2.17.1",
+    "moment-timezone": "^0.5.11",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sweetalert": "^1.1.3"
